# didcomm-ai-bridge

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  config.json-old  config1.json
src/: activate.rs  chat_messages.rs  config.rs  lib.rs  main.rs  setup_wizard.rs
src/agents/: concierge.rs  mod.rs  model.rs
src/agents/concierge/: concierge_handler.rs  mod.rs
src/agents/state_management/: mod.rs
src/didcomm_messages/: clear_messages.rs  mod.rs  oob_connection.rs
