[package]
name = "didcomm_ai-bridge"
description = "A DIDComm bridge for AI Agents"
version = "0.1.0"
edition = "2024"
authors = ["Glenn Gore <glenn@affinidi.com>"]
readme = "README.md"
homepage = "https://affinidi.com/"
license = "Apache-2.0"
keywords = ["ssi", "ATM", "affinidi", "DIDComm", "AI", "Ollama"]
repository = "https://github.com/affinidi/didcomm-ai-bridge"
publish = true
resolver = "3"

[dependencies]
affinidi-messaging-sdk = { version = "0.10.0", path = "../affinidi-messaging/affinidi-messaging-sdk" }
affinidi-messaging-didcomm = { version = "0.10.0", path = "../affinidi-messaging/affinidi-messaging-didcomm" }
affinidi-did-resolver-cache-sdk = "0.4.1"
affinidi-secrets-resolver = { version = "0.1", path = "../affinidi-tdk-rs/affinidi-tdk-common/affinidi-secrets-resolver" }
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4.39", features = ["alloc"] }
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
dialoguer = "0.11"
did-peer = "0.3"
futures = "0.3"
keyring = { version = "3.6", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
] }
ollama-rs = { version = "0.2", features = ["stream"] }
qrcode = "0.14"
regex = "1.11"
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
sha256 = "1.5"
ssi = { version = "0.10", features = ["secp384r1"] }
tokio = { version = "1.43", features = ["full"] }
tokio-stream = "0.1"
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_info",
] }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
] }
uuid = { version = "1.14", features = ["v4", "fast-rng"] }
